# skleton_tree

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  LICENSE.docs  README.md  pyproject.toml  tree.txt
.github/workflows/: ci.yml
.reuse/: dep5
src/: __init__.py  dir_gen.py  tree_gen.py
src/skleton_tree/: __init__.py  __main__.py  dir_gen.py  tree_gen.py
src/skleton_tree.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
tests/: conftest.py  test_roundtrip.py  test_tree_build_connectors.py
tools/: pc_pytest.py
